--- a/report/report.tex
+++ b/report/report.tex
@@ -39,7 +39,7 @@ e.g. the correct class, length, etc.
 
 \subsection{Courtney Schiffman}
 
-
+Courtney wrote the faux_Skx
 
 \subsection{Shamindra Shrotriya}
 
