--- a/vignettes/ars.Rmd
+++ b/vignettes/ars.Rmd
@@ -4,7 +4,6 @@ author: "Jonathan Larson [JL], Chenzhi Li [CL], Courtney Schiffman [CS]
          , Shamindra Shrotriya [SS]"
 date: "`r Sys.Date()`"
 output: rmarkdown::pdf_document
-fig_caption: yes
 vignette: >
   %\VignetteIndexEntry{Vignette Title}
   %\VignetteEngine{knitr::rmarkdown}
@@ -28,15 +27,16 @@ We can run a sample for a log-concave density function such as the standard
 normal, which is a pre-defined function in R
 
 ```{r echo=TRUE, cache=TRUE}
+require(ars)
 # Set the seed for reproducibility
-# set.seed(0)
+set.seed(0)
 
 # Generate 1000 standard normal N(0,1) random samples from the R 'dnorm' function
-# dnorm1000 <- ars(1000,g=dnorm,D=c(-Inf,Inf))
+dnorm1000 <- ars(100,g=dnorm,D=c(-Inf,Inf))
 
 # Produce the histogram of the sampled points to check that the output looks
 # valid
-# hist(dnorm1000, breaks=30, main="1000 points sampled from N(0,1)")
+hist(dnorm1000, breaks=30, main="1000 points sampled from N(0,1)")
 ```
 
 The output can be tested using the code below:
